--- a/backend/package.json
+++ b/backend/package.json
@@ -27,5 +27,8 @@
     "stripe": "^16.5.0",
     "tailwindcss": "^4.0.8",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "vite": "^6.2.0"
   }
 }
